navbar + assetes added

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 @import 'variables';
 
 body{
-    //background-color: $light-peach;
+    font-family: $font-family-base;
+    letter-spacing: 2px;
+    text-transform: uppercase;
 }
