--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,18 +1,18 @@
 <nav class="navbar">
     <div class="logo">
-      <img src="assets/logo.png" alt="Logo">
+      <img src="../../assets/images/shared/desktop/logo-dark.png" alt="Logo">
     </div>
   
     <!-- Meniu pentru desktop și tabletă -->
     <ul class="menu d-none d-md-flex">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
+      <li *ngFor="let item of menuItems">
+        <a [href]="item.link">{{ item.label }}</a>
+      </li>
     </ul>
   
     <!-- Meniu pentru mobil (hamburger icon) -->
     <div class="menu-mobile d-md-none">
-      <img src="assets/menu-icon.png" (click)="toggleMenu()" alt="Menu">
+      <img src="../../assets/images/shared/mobile/icon-hamburger.svg" (click)="toggleMenu()" alt="Menu">
     </div>
   
     <ul class="dropdown-menu" *ngIf="isMenuOpen">
