--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,3 +1,5 @@
+@import '../../variables';
+
 .navbar {
     display: flex;
     align-items: center;
@@ -15,12 +17,12 @@
       gap: 20px;
   
       li a {
-        color: black;
+        color: $black;
         text-decoration: none;
-        font-size: 18px;
+        font-size: 14px;
   
         &:hover {
-          color: #f8c291;
+          text-decoration: underline;
         }
       }
     }
