--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -30,3 +30,7 @@ $dark-grey: #333136;
 $white: #FFFFFF;
 $light-grey: #F1F3F5;
 
+//Media types
+$mobile: 576px;
+$tablet: 768px;
+$desktop: 1024px;
