home - first section

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,29 @@
-<p>home works!</p>
+<div class="container">
+    <div class="shared-section">
+        <div class="row">
+            <div class="col-lg-8 col-md-12">
+                <div class="shared-section-left">
+                    <div class="shared-section-left-title">
+                        Award-winning custom designs and digital branding solutions
+                    </div>
+                    <div class="shared-section-left-text">
+                        With over 10 years in the industry, we are experienced in creating fully responsive websites,
+                        app design,
+                        and engaging brand experiences. Find out more about our services.
+                    </div>
+                    <div class="shared-section-left-button">
+                        <button>Learn more</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-12">
+                <div class="shared-section-right">
+                    <img src="../../assets/images/home/desktop/image-hero-phone.png" alt="Phone Image" />
+                </div>
+            </div>
+        </div>
+        <div   >
+            <img class="circle-decoration"  src="../../assets/images/home/desktop/bg-pattern-hero-home.svg" alt="circle" />
+        </div>
+    </div>
+</div>
