--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -34,3 +34,8 @@ $light-grey: #F1F3F5;
 $mobile: 576px;
 $tablet: 768px;
 $desktop: 1024px;
+
+//Padding
+$padding-desktop: 2rem 7rem 2rem 7rem;
+$padding-tablet: 2rem 2rem 0 2rem;
+$padding-mobile: 1rem 1rem 0 1rem;
