--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -4,11 +4,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 2rem 7rem 0 7rem;
+    padding: $padding-desktop;
     color: $black;
+    margin-bottom: 2rem;
   
     .logo img {
-      width: 120px;
+      width: 196px;
     }
   
     .menu {
@@ -20,6 +21,8 @@
         color: $black;
         text-decoration: none;
         font-size: 14px;
+        letter-spacing: 2px;
+        text-transform: uppercase;
   
         &:hover {
           text-decoration: underline;
@@ -53,14 +56,14 @@
 //Tablet
   @media (max-width: $tablet) {
     .navbar {
-      padding: 2rem 2rem 0 2rem;
+      padding: $padding-tablet;
     }
   }
 
   // **Mobil**
   @media (max-width: $mobile) {
     .navbar {
-      padding: 1rem 1rem 0 1rem;
+      padding: $padding-mobile;
     }
 
     .menu-mobile {
