home - service-section

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,8 +22,136 @@
                 </div>
             </div>
         </div>
-        <div   >
-            <img class="circle-decoration"  src="../../assets/images/home/desktop/bg-pattern-hero-home.svg" alt="circle" />
+        <div>
+            <img class="circle-decoration" src="../../assets/images/home/desktop/bg-pattern-hero-home.svg"
+                alt="circle" />
+        </div>
+    </div>
+    <div class="services-section">
+        <div class="row">
+            <div class="col-lg-6 col-md-12 col-mg-md">
+                <div class="image-container">
+                    <a [routerLink]="imageLink.webDesign">
+                        <img src="../../assets/images/home/desktop/image-web-design-large.jpg" class="d-none d-lg-block"
+                            alt="Desktop Image">
+                        <div class="overlay-text d-none d-lg-block">
+                            <div>Web Design</div>
+                            <div class="projects">View projects
+                                <img src="../../assets/images/shared/desktop/icon-right-arrow.svg" alt="arrow" />
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="image-container">
+                    <a [routerLink]="imageLink.webDesign">
+                        <img src="../../assets/images/home/tablet/image-web-design.jpg"
+                            class="d-none d-md-block d-lg-none" alt="Tablet Image">
+                        <div class="overlay-text d-none d-md-block d-lg-none">Web Design</div>
+                    </a>
+                </div>
+
+                <div class="image-container">
+                    <a [routerLink]="imageLink.webDesign">
+                        <img src="../../assets/images/home/mobile/image-web-design.jpg" class="d-md-none"
+                            alt="Mobile Image">
+                        <div class="overlay-text d-md-none">Web Design</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-12">
+                <div class="row">
+                    <div class="col-lg-12 col-mg-lg col-mg-md">
+
+                        <div class="image-container">
+                            <a [routerLink]="imageLink.appDesign">
+                                <img src="../../assets/images/home/desktop/image-app-design.jpg"
+                                    class="d-none d-lg-block" alt="Desktop Image">
+                                <div class="overlay-text d-none d-lg-block">
+                                    <div>App Design</div>
+                                    <div class="projects">View projects
+                                        <img src="../../assets/images/shared/desktop/icon-right-arrow.svg"
+                                            alt="arrow" />
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="image-container">
+                            <a [routerLink]="imageLink.appDesign">
+                                <img src="../../assets/images/home/tablet/image-app-design.jpg"
+                                    class="d-none d-md-block d-lg-none" alt="Tablet Image">
+                                <div class="overlay-text d-none d-md-block d-lg-none">
+
+                                    <div>App Design</div>
+                                    <div class="projects">View projects
+                                        <img src="../../assets/images/shared/desktop/icon-right-arrow.svg"
+                                            alt="arrow" />
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="image-container">
+                            <a [routerLink]="imageLink.appDesign">
+                                <img src="../../assets/images/home/mobile/image-app-design.jpg" class="d-md-none"
+                                    alt="Mobile Image">
+                                <div class="overlay-text d-md-none">
+                                    <div>App Design</div>
+                                    <div class="projects">View projects
+                                        <img src="../../assets/images/shared/desktop/icon-right-arrow.svg"
+                                            alt="arrow" />
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+
+                        <div class="image-container">
+                            <a [routerLink]="imageLink.graphicDesign">
+                                <img src="../../assets/images/home/desktop/image-graphic-design.jpg"
+                                    class="d-none d-lg-block" alt="Desktop Image">
+                                <div class="overlay-text d-none d-lg-block">
+                                    <div>Graphic Design</div>
+                                    <div class="projects">View projects
+                                        <img src="../../assets/images/shared/desktop/icon-right-arrow.svg"
+                                            alt="arrow" />
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="image-container">
+                            <a [routerLink]="imageLink.graphicDesign">
+                                <img src="../../assets/images/home/tablet/image-graphic-design.jpg"
+                                    class="d-none d-md-block d-lg-none" alt="Tablet Image">
+                                <div class="overlay-text d-none d-md-block d-lg-none">
+                                    <div>Graphic Design</div>
+                                    <div class="projects">View projects
+                                        <img src="../../assets/images/shared/desktop/icon-right-arrow.svg"
+                                            alt="arrow" />
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="image-container">
+                            <a [routerLink]="imageLink.graphicDesign">
+                                <img src="../../assets/images/home/mobile/image-graphic-design.jpg" class="d-md-none"
+                                    alt="Mobile Image">
+                                <div class="overlay-text d-md-none">
+                                    <div>Graphic Design</div>
+                                    <div class="projects">View projects
+                                        <img src="../../assets/images/shared/desktop/icon-right-arrow.svg"
+                                            alt="arrow" />
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
