--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,119 +29,34 @@
     </div>
     <div class="services-section">
         <div class="row">
+            <!-- First Column: Large Image -->
             <div class="col-lg-6 col-md-12 col-mg-md">
-                <div class="image-container">
-                    <a [routerLink]="imageLink.webDesign">
-                        <img src="../../assets/images/home/desktop/image-web-design-large.jpg" class="d-none d-lg-block"
-                            alt="Desktop Image">
-                        <div class="overlay-text d-none d-lg-block">
-                            <div>Web Design</div>
+                <div *ngFor="let service of services | slice:0:1" class="image-container">
+                    <a [routerLink]="service.link">
+                        <img [src]="service.images.desktop" class="d-none d-lg-block" [alt]="service.name">
+                        <img [src]="service.images.tablet" class="d-none d-md-block d-lg-none" [alt]="service.name">
+                        <img [src]="service.images.mobile" class="d-md-none" [alt]="service.name">
+                        <div class="overlay-text">
+                            <div>{{ service.name }}</div>
                             <div class="projects">View projects
                                 <img src="../../assets/images/shared/desktop/icon-right-arrow.svg" alt="arrow" />
                             </div>
                         </div>
                     </a>
                 </div>
-
-                <div class="image-container">
-                    <a [routerLink]="imageLink.webDesign">
-                        <img src="../../assets/images/home/tablet/image-web-design.jpg"
-                            class="d-none d-md-block d-lg-none" alt="Tablet Image">
-                        <div class="overlay-text d-none d-md-block d-lg-none">Web Design</div>
-                    </a>
-                </div>
-
-                <div class="image-container">
-                    <a [routerLink]="imageLink.webDesign">
-                        <img src="../../assets/images/home/mobile/image-web-design.jpg" class="d-md-none"
-                            alt="Mobile Image">
-                        <div class="overlay-text d-md-none">Web Design</div>
-                    </a>
-                </div>
             </div>
+            <!-- Second Column: Nested Row with Two Smaller Images -->
             <div class="col-lg-6 col-md-12">
                 <div class="row">
-                    <div class="col-lg-12 col-mg-lg col-mg-md">
-
+                    <div class="col-lg-12 col-mg-lg col-mg-md" *ngFor="let service of services | slice:1">
                         <div class="image-container">
-                            <a [routerLink]="imageLink.appDesign">
-                                <img src="../../assets/images/home/desktop/image-app-design.jpg"
-                                    class="d-none d-lg-block" alt="Desktop Image">
-                                <div class="overlay-text d-none d-lg-block">
-                                    <div>App Design</div>
-                                    <div class="projects">View projects
-                                        <img src="../../assets/images/shared/desktop/icon-right-arrow.svg"
-                                            alt="arrow" />
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="image-container">
-                            <a [routerLink]="imageLink.appDesign">
-                                <img src="../../assets/images/home/tablet/image-app-design.jpg"
-                                    class="d-none d-md-block d-lg-none" alt="Tablet Image">
-                                <div class="overlay-text d-none d-md-block d-lg-none">
-
-                                    <div>App Design</div>
-                                    <div class="projects">View projects
-                                        <img src="../../assets/images/shared/desktop/icon-right-arrow.svg"
-                                            alt="arrow" />
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="image-container">
-                            <a [routerLink]="imageLink.appDesign">
-                                <img src="../../assets/images/home/mobile/image-app-design.jpg" class="d-md-none"
-                                    alt="Mobile Image">
-                                <div class="overlay-text d-md-none">
-                                    <div>App Design</div>
-                                    <div class="projects">View projects
-                                        <img src="../../assets/images/shared/desktop/icon-right-arrow.svg"
-                                            alt="arrow" />
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-12">
-
-                        <div class="image-container">
-                            <a [routerLink]="imageLink.graphicDesign">
-                                <img src="../../assets/images/home/desktop/image-graphic-design.jpg"
-                                    class="d-none d-lg-block" alt="Desktop Image">
-                                <div class="overlay-text d-none d-lg-block">
-                                    <div>Graphic Design</div>
-                                    <div class="projects">View projects
-                                        <img src="../../assets/images/shared/desktop/icon-right-arrow.svg"
-                                            alt="arrow" />
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="image-container">
-                            <a [routerLink]="imageLink.graphicDesign">
-                                <img src="../../assets/images/home/tablet/image-graphic-design.jpg"
-                                    class="d-none d-md-block d-lg-none" alt="Tablet Image">
-                                <div class="overlay-text d-none d-md-block d-lg-none">
-                                    <div>Graphic Design</div>
-                                    <div class="projects">View projects
-                                        <img src="../../assets/images/shared/desktop/icon-right-arrow.svg"
-                                            alt="arrow" />
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="image-container">
-                            <a [routerLink]="imageLink.graphicDesign">
-                                <img src="../../assets/images/home/mobile/image-graphic-design.jpg" class="d-md-none"
-                                    alt="Mobile Image">
-                                <div class="overlay-text d-md-none">
-                                    <div>Graphic Design</div>
+                            <a [routerLink]="service.link">
+                                <img [src]="service.images.desktop" class="d-none d-lg-block" [alt]="service.name">
+                                <img [src]="service.images.tablet" class="d-none d-md-block d-lg-none"
+                                    [alt]="service.name">
+                                <img [src]="service.images.mobile" class="d-md-none" [alt]="service.name">
+                                <div class="overlay-text">
+                                    <div>{{ service.name }}</div>
                                     <div class="projects">View projects
                                         <img src="../../assets/images/shared/desktop/icon-right-arrow.svg"
                                             alt="arrow" />
