using services-section component

--- a/src/app/web-design/web-design.component.html
+++ b/src/app/web-design/web-design.component.html
@@ -54,4 +54,6 @@
       </div>
     </div>
   </div>
+  <app-services-section [services]="services" [currentPage]="'web-design'">
+  </app-services-section>
 </div>
