changes before implementing locations (wip)

--- a/src/app/app-design/app-design.component.html
+++ b/src/app/app-design/app-design.component.html
@@ -8,4 +8,9 @@
             to your customers right at their fingertips.</div>
       </div>
     </div>
+
+    <app-portfolio-section [cards]="cards"></app-portfolio-section>
+
+    <app-services-section [services]="services" [currentPage]="'app-design'">
+    </app-services-section>
 </div>
