--- a/src/app/locations/locations.component.html
+++ b/src/app/locations/locations.component.html
@@ -1,1 +1,27 @@
-<p>locations works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-8 location-details">
+            <div class="title">Canada</div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="address">
+                        <div class="office">Designo Central Office</div>
+                        <div class="line-1">3886 Wellington Street</div>
+                        <div class="line-2">Toronto, Ontario M9C 3J5</div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="contact">
+                        <div>Contact</div>
+                        <div class="phone">P : +1 253-863-8967</div>
+                        <div class="email">M : contact&#64;designo.co</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <!-- <app-map >
+            </app-map> -->
+        </div>
+    </div>
+</div>
