--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar">
     <div class="logo">
+      <a href="/our-company">
       <img src="../../assets/images/shared/desktop/logo-dark.png" alt="Logo">
+    </a>
     </div>
   
     <!-- Meniu pentru desktop și tabletă -->
